# storage/api-docs/api-docs.json
@@ -1238,6 +1238,93 @@
                 }
             }
         },
+        "api/AdminDeleteGroup": {
+            "post": {
+                "tags": [
+                    "Groups"
+                ],
+                "summary": "AdminDeleteGroup",
+                "description": "AdminDeleteGroup",
+                "operationId": "AdminDeleteGroup",
+                "requestBody": {
+                    "description": "AdminDeleteGroup",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "true"
+                                ],
+                                "properties": {
+                                    "group_id": {
+                                        "type": "string",
+                                        "format": "text",
+                                        "example": "1"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "DeleteUserInGroup",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "api/DeleteUserInGroup": {
+            "post": {
+                "tags": [
+                    "Groups"
+                ],
+                "summary": "DeleteUserInGroup",
+                "description": "DeleteUserInGroup",
+                "operationId": "DeleteUserInGroup",
+                "requestBody": {
+                    "description": "DeleteUserInGroup",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "true"
+                                ],
+                                "properties": {
+                                    "user_id": {
+                                        "type": "string",
+                                        "format": "user_id",
+                                        "example": "1"
+                                    },
+                                    "group_id": {
+                                        "type": "string",
+                                        "format": "text",
+                                        "example": "1"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "DeleteUserInGroup",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "api/SuccessGroupLogin": {
             "post": {
                 "tags": [
@@ -1493,6 +1580,57 @@
                 }
             }
         },
+        "api/UserAddNewModeradorAnDelete": {
+            "post": {
+                "tags": [
+                    "Groups"
+                ],
+                "summary": "UserAddNewModeradorAnDelete",
+                "description": "UserAddNewModeradorAnDelete",
+                "operationId": "UserAddNewModeradorAnDelete",
+                "requestBody": {
+                    "description": "UserAddNewModeradorAnDelete",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "true"
+                                ],
+                                "properties": {
+                                    "group_id": {
+                                        "type": "string",
+                                        "format": "text",
+                                        "example": "1"
+                                    },
+                                    "user_id": {
+                                        "type": "string",
+                                        "format": "text",
+                                        "example": "1"
+                                    },
+                                    "moderator": {
+                                        "type": "string",
+                                        "format": "text",
+                                        "example": "true or false"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "UserAddNewModeradorAnDelete",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "api/LogoutInGroup": {
             "post": {
                 "tags": [
@@ -1723,14 +1861,14 @@
                 }
             }
         },
-        "api/AddInviteGetGroupFromFriendMember": {
+        "api/AddInviteGetGroupFromFriend": {
             "post": {
                 "tags": [
                     "Groups"
                 ],
-                "summary": "AddInviteGetGroupFromFriendMember",
-                "description": "AddInviteGetGroupFromFriendMember",
-                "operationId": "AddInviteGetGroupFromFriendMember",
+                "summary": "AddInviteGetGroupFromFriend",
+                "description": "AddInviteGetGroupFromFriend",
+                "operationId": "AddInviteGetGroupFromFriend",
                 "requestBody": {
                     "description": "Moderator created successfully",
                     "required": true,
@@ -1759,7 +1897,7 @@
                 },
                 "responses": {
                     "200": {
-                        "description": "AddInviteGetGroupFromFriendMember",
+                        "description": "AddInviteGetGroupFromFriend",
                         "content": {
                             "application/json": {
                                 "schema": {}
@@ -3199,6 +3337,39 @@
                 "responses": {
                     "200": {
                         "description": "User Create Comments",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "api/GetCountsFromProject": {
+            "post": {
+                "tags": [
+                    "Profile"
+                ],
+                "summary": "GetCountsFromProject",
+                "description": "GetCountsFromProject",
+                "operationId": "GetCountsFromProject",
+                "requestBody": {
+                    "description": "User Send Email for add",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "required"
+                                ]
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Returned All Counts In Proect From Auth User",
                         "content": {
                             "application/json": {
                                 "schema": {}
